This is my commit for node 3.04

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
+
+        buildTypes.each {
+            it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', "\"cfacc4c48ad4d9e09bac5cbdd08feaba\""
+
+        }
+
+    }
+
+
+
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
