--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', [INSERT_API_KEY_HERE]
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', "\"cfacc4c48ad4d9e09bac5cbdd08feaba\""
     }
 }
 
