--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,9 +38,7 @@
         
         <provider
             android:authorities="com.example.android.sunshine.app"
-            android:name=".data.WeatherProvider"
-            android:enabled="true"
-            android:exported="true"/>
+            android:name=".data.WeatherProvider" />
     </application>
 
 </manifest>
