--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,16 @@ android {
     }
 }
 
+repositories {
+    mavenCentral() // for glide jcenter() works as well because it pulls from Maven Central
+}
+
 dependencies {
 
     def supportLibVersion = "23.2.1";
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile 'com.github.bumptech.glide:glide:3.7.0' //glide
+    compile 'com.android.support:support-v4:19.1.0' //glide
 }
