--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -22,6 +23,8 @@ android {
     }
 }
 
+
+
 repositories {
     mavenCentral() // for glide jcenter() works as well because it pulls from Maven Central
 }
@@ -34,4 +37,5 @@ dependencies {
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile 'com.github.bumptech.glide:glide:3.7.0' //glide
     compile 'com.android.support:support-v4:19.1.0' //glide
+    compile 'com.google.android.gms:play-services-gcm:9.0.0'
 }
