--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -37,5 +36,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile 'com.github.bumptech.glide:glide:3.7.0' //glide
     compile 'com.android.support:support-v4:19.1.0' //glide
+    compile 'com.android.support:support-annotations:22.0.0'
     compile 'com.google.android.gms:play-services-gcm:9.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
