--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0' //glide
     compile 'com.android.support:support-v4:21.0.3' //glide
     compile 'com.android.support:support-annotations:22.0.0'
+    compile 'com.android.support:gridlayout-v7:22.1.0'
     compile 'com.google.android.gms:play-services-gcm:9.0.0'
 }
