--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.android.support:support-annotations:22.0.0'
     compile 'com.android.support:gridlayout-v7:22.1.0'
     compile 'com.google.android.gms:play-services-gcm:9.0.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
 }
