--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,6 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:22.1.0'
     compile 'com.google.android.gms:play-services-gcm:9.0.0'
     compile 'com.android.support:cardview-v7:23.3.0'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
 
 }
