--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
     <uses-permission
         android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission
+        android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <!-- Permissions required for Google Cloud Messaging -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -115,6 +118,10 @@
             android:name=".gcm.RegistrationIntentService"
             android:exported="false" >
         </service>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA229-cYf3tyG1pIH7-ec66vZB0su-Ei8s"/>
     </application>
 
 </manifest>
