--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.google.android.gms:play-services-location:9.0.0'
+    compile 'com.google.android.apps.muzei:muzei-api:+'
 
 
 }
