--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile 'com.android.support:design:22.2.0'
     compile 'com.google.android.gms:play-services-location:9.0.0'
     compile 'com.google.android.apps.muzei:muzei-api:+'
+    compile 'com.google.android.support:wearable:+'
+    compile 'com.google.android.gms:play-services-wearable:9.0.0'
 
 
 }
