--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.sunshine.app">
 
@@ -11,7 +12,6 @@
 
     <!-- Permissions required to make our UI more friendly -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <!-- Permissions required for Google Cloud Messaging -->
@@ -21,6 +21,7 @@
     <permission
         android:name="com.example.android.sunshine.app.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="com.example.android.sunshine.app.permission.C2D_MESSAGE" />
 
     <application
@@ -69,6 +70,7 @@
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
+
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
@@ -81,6 +83,7 @@
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
+
             <meta-data
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/syncadapter" />
@@ -99,7 +102,7 @@
             </intent-filter>
         </receiver>
 
-        <!--Widget Receiver-->
+        <!-- Widget Receiver -->
         <receiver
             android:name=".widget.TodayWidgetProvider"
             android:label="@string/title_widget_today">
@@ -107,12 +110,14 @@
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="com.example.android.sunshine.app.ACTION_DATA_UPDATED" />
             </intent-filter>
+
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info_today" />
         </receiver>
 
         <service android:name=".widget.TodayWidgetIntentService" />
+
         <receiver
             android:name=".widget.DetailWidgetProvider"
             android:enabled="@bool/widget_detail_enabled"
@@ -121,6 +126,7 @@
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="com.example.android.sunshine.app.ACTION_DATA_UPDATED" />
             </intent-filter>
+
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info_detail" />
@@ -147,17 +153,19 @@
         </service>
         <service
             android:name=".gcm.RegistrationIntentService"
-            android:exported="false">
-        </service>
-
-        <service android:name=".muzei.WeatherMuzeiSource"
+            android:exported="false"></service>
+        <service
+            android:name=".muzei.WeatherMuzeiSource"
+            android:description="@string/muzei_description"
             android:icon="@drawable/ic_muzei"
-            android:label="@string/app_name"
-            android:description="@string/muzei_description">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="com.google.android.apps.muzei.api.MuzeiArtSource" />
             </intent-filter>
-            <meta-data android:name="color" android:value="@color/primary" />
+
+            <meta-data
+                android:name="color"
+                android:value="@color/primary" />
         </service>
 
         <meta-data
