--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.google.android.apps.muzei:muzei-api:+'
     compile 'com.google.android.support:wearable:+'
     compile 'com.google.android.gms:play-services-wearable:9.0.0'
+    wearApp project(':wear')
 
 
 }
